[package]
name = "si-conservation-enforcer"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance"]
license = "MIT"
description = "FLUX bytecode conservation-law enforcement for LLM outputs (Rust)"
repository = "https://github.com/SuperInstance/conservation-enforcer-rs"
homepage = "https://github.com/SuperInstance/conservation-enforcer-rs"
keywords = ["flux", "conservation", "llm", "policy", "bytecode"]
categories = ["no-std", "embedded", "wasm"]

[lib]
name = "conservation_enforcer"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
audit = ["std"]
metrics = ["std"]

[dependencies]
# No external dependencies — the VM and all policies are implemented from scratch.
