[package]
name = "conservation-enforcer-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the Conservation Enforcer for FLUX bytecode conservation-law enforcement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/conservation-enforcer-rs"
homepage = "https://github.com/SuperInstance/conservation-enforcer-rs"
readme = "README.md"
keywords = ["flux", "vm", "conservation", "enforcement", "llm", "ai"]
categories = ["virtualization", "embedded"]

[dependencies]
fluxvm = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
